# notary

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mix.exs
adapters/rust/: Cargo.toml  build.rs
adapters/rust/src/: lib.rs
client/: .gitignore  CHANGELOG.md  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
client/.changeset/: kind-melons-retire.md  light-carrots-greet.md
client/src/: index.ts  notary.ts  schemas.ts  transport.ts
config/: config.exs  runtime.exs
example/: .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml
example/src/: App.tsx  main.tsx  notary.ts  vite-env.d.ts
example/src/routes/: __root.tsx  _auth.profile.tsx  _auth.tsx  callback.tsx  index.tsx  login.tsx
lib/callbacks/: google.html
lib/notary/: application.ex  archivist.ex  client.ex  credentials.ex  helpers.ex  registrar.ex  repo.ex  router.ex  token.ex  user.ex
lib/notary/portal/: router.ex  token.ex
lib/notary/services/: oauth2.ex
lib/protos/: notary.pb.ex
portal/: package.json  pnpm-lock.yaml  tsconfig.json
portal/src/: App.tsx  Footer.tsx  http.ts  index.tsx  schema.ts  store.ts  vite-env.d.ts
portal/src/pages/: Login.tsx  Portal.tsx
priv/repo/migrations/: 20240216202548_create_users.exs  20240217213123_create_clients.exs  20240219204509_create_users_unique_index.exs  20240302035346_clients_notary_host.exs  20241027031403_create_credentials.exs
protos/: notary.proto
