[package]
name = "notary-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "rust client bindings for the Notary oauth2 server"
documentation = "https://github.com/erwijet/notary"
repository = "https://github.com/erwijet/notary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
